WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: I2df23a19e51a8a1b95558cec86fdcbd6f2f137aa
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -1,5 +1,5 @@
 #+TITLE:  Droids @ XCP-ng
-#+AUTHOR: Philippe Coval <purl.org/rzr> #FOSDEM 2026
+#+AUTHOR: Philippe.Coval @vates.tech #FOSDEM 2026
 #+EMAIL: philippe.coval@vates.tech
 
 #+OPTIONS: num:nil timestamp:nil toc:nil tags:nil tag:nil ^:nil
