--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -23,7 +23,7 @@ SPDX-FileCopyrightText: Philippe Coval <purl.org/rzr>
 #+end_export
 
 #+ATTR_HTML: :width 10% :align right
-https://cdn.fosstodon.org/accounts/avatars/000/070/341/original/6c1efcee976f653b.jpg
+https://files.mastodon.social/cache/preview_cards/images/170/927/513/original/e6715c25781486ff.png
 #+BEGIN_NOTES
 
 
@@ -50,76 +50,66 @@ serait pas ce qu'il est aujourd'hui.
 Car sans communauté, un logiciel libre (ou simplement juste ses
 sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
 
+https://files.mastodon.social/cache/preview_cards/images/177/381/674/original/de10ab174e3cb83b.webp
 
 #+END_NOTES
 
-* Context
- - Event: #RennesEmbedded <2026-01-29 Thu>
-   - Place: Rennes France
-   - Inscriptions a:
-     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
- - Slides to be published later at:
-   - https://purl.org/rzr/presentations
-
-* WARNING: This is a DRAFT !!!
-  - En attendant les slides
-  - A story to share please contact me
-  - Partagons le train pour fosdem2026 au depart de Rennes ?
-    - https://codeberg.org/HackerTrain/groups/issues/9
-
-* WARNING: Not the slides to be presented
-
 * Who?
-  #+ATTR_REVEAL: :frag (fade-in)
- - Philippe Coval <https://purl.org/rzr>
+ - Philippe Coval: <https://purl.org/rzr>
  - Professional "OpenSource" Engineer
    - Now: @[[https://vates.tech/en/about-vates/open-source-commitment/#2026][Vates]] on https://XCP-ng.org
    - Ex: Intel, Samsung, Huawei, SiliconLabs...
  - Volunteering (FLOSS: Debian, MozRep...)
- - Speaking at RennesEmbedded meetup
+ - Speaking at [[https://www.images-et-reseaux.com/agenda/rennes-embedded/][RennesEmbedded meetup]]
    - Thanx [[https://savoirfairelinux.com/][SavoirFaireLinux]] <3 !
  - Fosdemer: since 2003 to 2026 (10+ times)
 
 * Why?
-
+  #+ATTR_REVEAL: :frag (fade-in)
  - Offen, I am asked by students (or bosses)
-   - How to do opensource ? (and make money)
+   - How to do opensource ? (or make $)
  - Why loosing time to work for free on OSS ?
    - focus more what you will gain
  - Linux is too big for Embedeed system/MCU?
    - What made linux a success? community
+ - FLOSS is not not only code (people matters)
  - But instead of starting your community (alone)
    - Take part of an established community
    - FOSDEM is THE project to learn from
      - [[https://volunteers.fosdem.org/][join volunteers]] (onsite or offline)
 
 * Where?
+#+ATTR_REVEAL: :frag (fade-in)
+  - FOSDEM is a community driven FLOSS event
+    - free like /beer/ (of BXL.be at ULB)
+    - free like /speech/: (~1K talks)
+  - On 1st WEEKEND of Feb (winter) since Y2K
+    - filters un-passionate people
+    - spoiler: does not work: +8K attendees
+  - If you care about OSS:
+    - it's a lifetime experience
+  - It changed my life! maybe yours (soon?)
+    - Not an ego trip, just a testimonial
 
- - FOSDEM is a community driven FLOSS event
-   - free like beer (of BXL.be at ULB)
-   - free like speech: (1K talks)
- - On 1st WEEKEND of Feb (winter) since Y2K
-   - filters un-passionate people
-   - spoiler: does not work: 8K attendees
- - If you care about OSS:
-   - it's a lifetime experience
- - It changed my life! maybe yours (soon?)
-   - Not an ego trip, just a testimonial
+* People matters !
+#+ATTR_HTML: :width 1000% :align center style="border:0px solid black;"
+https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto,format=auto/https%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fuploads%2Farticles%2Fovineq409cw97ntfbn9r.png
+
 
 * How?
-
+  #+ATTR_REVEAL: :frag (fade-in)
   - 200? : Wanted to work on OSS/linux,
     - let's go fosdem with my printed CVs for
       - ... the garbage, nobody would care
     - no companies, no reps, just geeks (like me)
     - Only a job table but nobody! stickers
-  - 2012: Came back to met Maemo.org communtiy
+  - 2012: Came back to met Maemo communtiy
     - Transition from MeeGo to [[https://archive.fosdem.org/2012/schedule/event/tizen_and_the_future_of_community.html][Tizen]] ???
   - Coincidentally, I've been contacted to
     - join an Intel team to work on a "WIP" OS
 
 * Taking risks
-
+  #+ATTR_REVEAL: :frag (fade-in)
   - [[https://archive.fosdem.org/2014/schedule/speaker/phil_coval_rzr/#tizen-contib][2014]] : 1st time speaking : [[https://web.archive.org/web/20230419054259/https://wiki.tizen.org/FOSDEM][Tizen]]
     - I vonlontered to promote this "WIP" OS
       - no other kamikaze in team dared to
@@ -128,8 +118,8 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
     - Rooms full, no problem, socialize outside
     - Had causal dinner with community (+pros)
 
-* Failures, Pays off
-
+* Failures, pay off
+  #+ATTR_REVEAL: :frag (fade-in)
   - 2016 : Applied for job online at S-OSG
   - Inteview summary:
     - It didn't started as I hoped:
@@ -140,31 +130,44 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
     - to work on OSS IoT (OCF/IoTivity)
 
 * to Yearly pilgrimage
-
+  #+ATTR_REVEAL: :frag (fade-in)
   - [[https://archive.fosdem.org/2016/schedule/speaker/phil_coval/][2016]] : Hosted [[https://web.archive.org/web/20230419054259/https://wiki.tizen.org/FOSDEM][Tizen stand]], many demos + talks
   - [[https://archive.fosdem.org/2017/schedule/speaker/philippe_coval/#:iotivity:][2017]] / [[https://archive.fosdem.org/2018/schedule/speaker/philippe_coval/#:tizenrt:][2018]] : more IoT talks
-  - [[https://archive.fosdem.org/2019/schedule/speaker/philippe_coval/][2019]] : Co-presented WebThings in Mozilla room
+  - [[https://archive.fosdem.org/2019/schedule/speaker/philippe_coval/][2019]] : Co-presented WebThings w/ Mozilla Rep
   - [[https://archive.fosdem.org/2020/schedule/speaker/philippe_coval/][2020]] : [[https://wiki.mozilla.org/User:Rzr][I]] backuped a [[https://fosdem.org/2026/schedule/speaker/kathy_giori/][Mozillian]]
+    - just before 2020 lockdowns :(
+  - 2021/2022: Was online on matrix chat
+    - Let's adapt
+
+* 2021, locked down
+#+ATTR_HTML: :width 75% :align center style="border:0px solid black;"
+https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/original/5ed15e0de9c7ae9d.jpeg
+
+* 2022, home again
+  #+ATTR_REVEAL: :frag (fade-in)
   - 2021 : as Volunteer (online)
-    - Watched OpenHarmony launch
-      - A yocto derived project
+    - Wached OpenHarmony launch (Huawei)
+      - A yocto derived project under eclipe
     - Tested it (I rebased a pet project on it)
       - Gave feedback, got hired, easy
-  - [[https://archive.fosdem.org/2022/schedule/speaker/philippe_coval/][2022]] : Oniro virtual [[https://archive.fosdem.org/2022/stands.fosdem.org/stands/oniro_project/][stand + 18 talks]]
+  - [[https://archive.fosdem.org/2022/schedule/speaker/philippe_coval/][2022]] : Eclipse Oniro virtual [[https://archive.fosdem.org/2022/stands.fosdem.org/stands/oniro_project/][stand + 18 talks]]
+
+* 2021
+@@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QMl2YtuUdac#pinball-ohos-fosdem2021" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
 
 * When ?
-
-  - 2025, headehunter contacted me (said OSS)
-    - I hesitated to change job, until I found
-    - FOSDEM video of company Co-Founder
-      - xcpp-ng story, relationship to xen...
+  #+ATTR_REVEAL: :frag (fade-in)
+  - 2025, headhunter contacted me (said OSS)
+    - I hesitated to change job, until I found...
+    - a FOSDEM video of company Co-Founder
+      - XCP-ng story, relationship to Xen...
       - Recurent presence and consistency !!!
   - Values aligned for a FLOSS passionate !
-  - 2026: We, Vates staff will host a stand
-    - Check for Xen, xcp-ng (K building)
+  - 2026: We, [[https://vates.tech/blog/fosdem-2026/][Vates staff will host a stand]]
+    - Check for Xen, XCP-ng (H building)
 
 * Summary
-
+  #+ATTR_REVEAL: :frag (fade-in)
   - FOSDEM is huge can't be sumirized in 15min,
     - Content is online, community isn't
     - The pilgrimage for Software dev
@@ -175,17 +178,26 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
   - Communuty needs Software
     - Software needs Community, so FOSDEM !
 
-* No Questions, Now your turn
+* No QA !
+#+ATTR_HTML: :width 75% :align center style="border:0px solid black;"
+https://files.mastodon.social/media_attachments/files/107/757/920/527/832/904/original/7091b1319becb423.png
 
+* Now your turn!
   - Share us your past FOSDEM annectodes
   - What makes FOSDEM so special to you ?
   - How this event affected your projects ?
   - Going to FOSDEM26 (or OFFDEM?)
-    - Take the HackerTrain GNU group
-    - Let's meet again at: XCP-ng stand or
-      - Signing party, Bytenight,
+    - Take the [[https://codeberg.org/HackerTrain/groups/issues/9][HackerTrain "Gnu" group]]
+    - Let's meet again at: [[https://xcp-ng.org/forum/topic/11778/fosdem-2026][XCP-ng stand]]
       - or Junior Room (7-17 Yo)
-	- to inspire the next generation
+	- to inspire the next generations
+ - Slides: https://purl.org/rzr/presentations
+
+* droids @ xcp-ng
+#+ATTR_HTML: :width 50% :align center style="border:0px solid black;"
+https://files.mastodon.social/cache/preview_cards/images/179/562/146/original/274fc1468b168fe4.png
+
+* Extra?
 
 * #CommunityFirst,
   - que mon témoignage vous inspire !
@@ -206,7 +218,7 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
       - dans l'esprit communautaire
 	- qui l'anime.
 
-*  Au lieu de
+* Au lieu de
   - théoriser sur le logiciel libre
     - ou d'expliquer le fonctionnement
       - des communautés open source,
@@ -233,8 +245,8 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
      - n'est guerre mieux
        - qu'un banal logiciel :)
 
-
 * More or Q&A ?, Thx!
+
   #+ATTR_REVEAL: :frag (fade-in)
   - Ask me now or later
     - https://purl.org/rzr
@@ -243,6 +255,18 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
   - Resources:
     - https://www.images-et-reseaux.com/agenda/rennes-embedded/
     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
+
+
+* Context
+ - Event: #RennesEmbedded <2026-01-29 Thu>
+   - Place: Rennes France
+   - Inscriptions a:
+     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
+ - Slides to be published later at:
+   - https://purl.org/rzr/presentations
+
+
+
 
 *  
   #+ATTR_HTML: :width 45% :align center style="border:0px solid black;"
@@ -257,3 +281,6 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
 [[https://diode.zone/video-channels/www.rzr.online.fr#][📺]]
 [[http://purl.org/rzr/youtube#:TODO:2020:][📺]]
 [[http://purl.org/rzr/videos][📺]]
+
+
+
