--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -45,6 +45,7 @@ Portability on linux phones, energy offload apps
     - Freedom/Mind/Privacy/Battery...
   - ❤️ The Open Web (PWA on *any* devices)
   - Resist to the pressure, or mitigate annoyance
+  - Be creative !
 
 * Value proposal
   - DiY "Apps on demand" web service:
@@ -85,7 +86,7 @@ Portability on linux phones, energy offload apps
   - sudo reboot
 
 
-*
+* 
   #+ATTR_HTML: :width 80% :align center style="border:0px solid black;"
   https://files.mastodon.social/cache/preview_cards/images/179/562/146/original/274fc1468b168fe4.png
 
