WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: I7374195dff8eb8ad0158b6eee8aba30d35d7aca6
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -49,7 +49,7 @@ Portability on linux phones, energy offload apps
 
 * Value proposal
   - DiY "Apps on demand" web service:
-  - Apps isolated/offloaded in VMs
+  - Isolate Apps in VMs located in:
     - seflhosted (homelab/PC) or cloud
   - Remote access possible (from phone too)
     - 100% FLOSS: XCP-ng/xo (xen)
