WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: I9706051855df40c6f2877f6531e51c84731a2f39
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -86,9 +86,9 @@ Portability on linux phones, energy offload apps
 
 * Enjoy
   * From web on XCP-ng WebView (or XO)
-  * Keep hacking: RDP, tunnel, WoL
-    - XCP-ng 9, ARM, Android 15,
-    - TC / Remote attestation?
+  * Keep hacking: RDP, tunnel, WoL...
+    - XCP-ng 9, ARM...
+    - A15, TC API / Remote attestation
   * More tips online:
     - https://purl.org/rzr/presentations
   * Feedback welcome
