WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: Iff54a816ae48c0b0dc2d3fff05f79bc7d42e9ab9
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -54,8 +54,8 @@ Portability on linux phones, energy offload apps
 * Value proposal
   - DiY "Apps on demand" web service:
     - Relocate apps:
-      - from your "personnal" (unfree) devices
-      - to "libre" homelab (PC)):
+      - from "personnal" devices
+      - to homelab (PC)
         - app runs sandboxed (in VM(s))
     - Remote access possible (from phone too)
   - 100% FLOSS, Cheap, easy to setup (~2h)
