--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -1,5 +1,5 @@
 #+TITLE:  Droids @XCP-ng
-#+AUTHOR: Philippe.Coval @vates.fr #FOSDEM2026
+#+AUTHOR: Philippe.Coval #FOSDEM2026
 #+EMAIL: philippe.coval@vates.tech
 
 #+OPTIONS: num:nil timestamp:nil toc:nil tags:nil tag:nil ^:nil
