WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: I1f40a1e64fe484bb9ab1f4fda38475b60dcf9c27
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -1,5 +1,5 @@
-#+TITLE:  Droids @XCP-ng
-#+AUTHOR: Philippe.Coval #FOSDEM2026
+#+TITLE:  XCP-ng
+#+AUTHOR: Philippe.Coval
 #+EMAIL: philippe.coval@vates.tech
 
 #+OPTIONS: num:nil timestamp:nil toc:nil tags:nil tag:nil ^:nil
