WIP: mod: docs/xcp-ng/index.org (master)
Change-Id: I3f7d7d7d987983a4c9ce28776829ad3f3cb8994d
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/xcp-ng/index.org
+++ b/docs/xcp-ng/index.org
@@ -96,7 +96,7 @@ https://files.mastodon.social/cache/preview_cards/images/179/562/146/original/27
   * Keep hacking: UX/UI, RDP, tunnel
     - ARM translation to x86_64?
   * Challenges:
-    - Native ARM with XCP-ng 9 (PoC)
+    - [[https://vates.tech/blog/vms-on-ampere-arm-processors/][Native ARM]] with [[https://xcp-ng.org/forum/topic/11698/xcp-ng-9.0-demonstrator-early-preview][XCP-ng 9]] (PoC)
     - A15, TC API / Remote attestation
   * More tips online:
     - https://purl.org/rzr/presentations
