--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -53,22 +53,6 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
 
 #+END_NOTES
 
-* Context
- - Event: #RennesEmbedded <2026-01-29 Thu>
-   - Place: Rennes France
-   - Inscriptions a:
-     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
- - Slides to be published later at:
-   - https://purl.org/rzr/presentations
-
-* WARNING: This is a DRAFT !!!
-  - En attendant les slides
-  - A story to share please contact me
-  - Partagons le train pour fosdem2026 au depart de Rennes ?
-    - https://codeberg.org/HackerTrain/groups/issues/9
-
-* WARNING: Not the slides to be presented
-
 * Who?
   #+ATTR_REVEAL: :frag (fade-in)
  - Philippe Coval <https://purl.org/rzr>
@@ -88,6 +72,8 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
    - focus more what you will gain
  - Linux is too big for Embedeed system/MCU?
    - What made linux a success? community
+ - FLOSS community is not not only code
+   - People matters too
  - But instead of starting your community (alone)
    - Take part of an established community
    - FOSDEM is THE project to learn from
@@ -152,6 +138,11 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
       - Gave feedback, got hired, easy
   - [[https://archive.fosdem.org/2022/schedule/speaker/philippe_coval/][2022]] : Oniro virtual [[https://archive.fosdem.org/2022/stands.fosdem.org/stands/oniro_project/][stand + 18 talks]]
 
+
+* 2021
+
+@html:<iframe width="560" height="315" src="https://www.youtube.com/watch?v=QMl2YtuUdac#pinball-ohos-fosdem2021" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
+
 * When ?
 
   - 2025, headehunter contacted me (said OSS)
@@ -181,11 +172,12 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
   - What makes FOSDEM so special to you ?
   - How this event affected your projects ?
   - Going to FOSDEM26 (or OFFDEM?)
-    - Take the HackerTrain GNU group
-    - Let's meet again at: XCP-ng stand or
-      - Signing party, Bytenight,
+    - Take the [[https://codeberg.org/HackerTrain/groups/issues/9][HackerTrain "Gnu" group]]
+    - Let's meet again at: [[https://xcp-ng.org/forum/topic/11778/fosdem-2026][XCP-ng stand]]
       - or Junior Room (7-17 Yo)
-	- to inspire the next generation
+	- to inspire the next generations
+
+* Extra?
 
 * #CommunityFirst,
   - que mon témoignage vous inspire !
@@ -243,6 +235,18 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
   - Resources:
     - https://www.images-et-reseaux.com/agenda/rennes-embedded/
     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
+
+
+  * Context
+ - Event: #RennesEmbedded <2026-01-29 Thu>
+   - Place: Rennes France
+   - Inscriptions a:
+     - https://www.eventbrite.ca/e/billets-rennes-embedded-1977364705062
+ - Slides to be published later at:
+   - https://purl.org/rzr/presentations
+
+
+
 
 *  
   #+ATTR_HTML: :width 45% :align center style="border:0px solid black;"
