WIP: mod: docs/fosdem/index.org (master)
Change-Id: Ic6a714f84cea5de2d352fa72cd49367418760962
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -151,8 +151,8 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
       - xcpp-ng story, relationship to xen...
       - Recurent presence and consistency !!!
   - Values aligned for a FLOSS passionate !
-  - 2026: We, Vates staff will host a stand
-    - Check for Xen, xcp-ng (K building)
+  - 2026: We, [[https://vates.tech/blog/fosdem-2026/][Vates staff will host a stand]]
+    - Check for Xen, xcp-ng (H building)
 
 * Summary
 
